# evm-amm-search

./: .amm-route-tui.toml.sample  .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  foundry.toml  sidecar-executor-e2e-evidence.json  sidecar-graph-index-hardening-evidence.json  sidecar-graph-index-release-evidence.json
.github/workflows/: ci.yml  executor-fork.yml  quoter-nightly.yml  sidecar-release.yml
benches/: graph_lifecycle.rs  live_search_runtime.rs
contracts/: DemoRouter.runtime.hex  DemoRouter.sol  ExperimentalExecutorRouter.sol  ExperimentalExecutorRouterFactory.sol  MultihopQuoter.sol  README.md
contracts/test/: LocalV2Quoter.sol
docs/: incremental-search-universe.md  live-consumer-migration.md  live-route-runtime.md  network-cold-start-benchmark.md  quote-quality-benchmarks.md  search-performance-model.md  warm-checkpoint-consistency.md
examples/: aggregator_quote_comparison.rs  arbitrage_search.rs  demo_router_route_check.rs  docs_route_benchmark.rs  dynamic_live_routes.rs  multihop_quote_contract.rs  production_basket_search.rs  progressive_live_routes.rs  rpc_payload_ceiling.rs
examples/support/: mod.rs
script/: DeployExperimentalExecutor.s.sol
sidecar/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  GRAPH_INDEX_BENCHMARKS.md  PRODUCTION_READINESS.md  QUOTER_HARDENING.md  README.md  compose.release.yaml  compose.yaml
sidecar/benches/: graph_index.rs
sidecar/examples/: anvil-mainnet-e2e.toml  anvil-quoter-hardening.toml  anvil-quoter-release-gate.toml  ethereum-mainnet.toml
sidecar/fixtures/: README.md
sidecar/scripts/: build-release-image.sh  executor-e2e-anvil.sh  executor-fork-smoke.sh  executor-preflight.sh  live-smoke-container.sh  quoter-hardening-anvil.sh  smoke-container.sh
sidecar/src/: api.rs  config.rs  coverage.rs  execution.rs  graph_index.rs  lib.rs  main.rs  node.rs
sidecar/tests/: cli.rs  graph_index.rs  http_api.rs
src/: demo_router.rs  graph.rs  lib.rs  liquidity.rs  live_graph.rs  live_routes.rs  overlay_cache.rs  search.rs
test/: ExperimentalExecutorRouter.t.sol  ExperimentalExecutorRouterFork.t.sol
tests/: live_graph.rs  live_routes.rs  search.rs
