[package]
name = "evm-amm-search"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Graph-based AMM route and cycle search over evm-amm-state pools"
keywords = ["evm", "amm", "defi", "routing", "search"]
categories = ["cryptography::cryptocurrencies", "simulation"]
readme = "README.md"
repository = "https://github.com/KaiCode2/evm-amm-search"
documentation = "https://docs.rs/evm-amm-search"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Standalone workspace root: keeps this crate from being absorbed by any
# ancestor-directory workspace and gives it its own Cargo.lock.
[workspace]

[features]
default = [
    "live-runtime",
    "uniswap-v2",
    "uniswap-v3",
    "pancake-v3",
    "slipstream",
    "balancer-v2",
    "solidly-v2",
    "curve",
]

adapters = ["evm-amm-state/adapters"]
live-runtime = ["adapters", "evm-amm-state/live-runtime"]
uniswap-v2 = ["adapters", "evm-amm-state/uniswap-v2"]
uniswap-v3 = ["adapters", "evm-amm-state/uniswap-v3"]
pancake-v3 = ["uniswap-v3", "evm-amm-state/pancake-v3"]
slipstream = ["uniswap-v3", "evm-amm-state/slipstream"]
balancer-v2 = ["adapters", "evm-amm-state/balancer-v2"]
solidly-v2 = ["adapters", "evm-amm-state/solidly-v2"]
curve = ["adapters", "evm-amm-state/curve"]
experimental-protocols = ["evm-amm-state/experimental-protocols"]

[dependencies]
alloy-consensus = "1.1.2"
alloy-eips = "1.0.38"
alloy-json-rpc = "1.0.38"
alloy-primitives = { version = "1.4", features = ["map"] }
alloy-network = "1.0.38"
alloy-provider = { version = "1.0.38", features = ["ws"] }
alloy-rpc-client = "1.0.38"
alloy-rpc-types-eth = "1.0.38"
alloy-sol-types = "1.0.38"
alloy-transport = "1.0.38"
alloy-transport-balancer = { version = "0.2.0", path = "../alloy-transport-balancer" }
anyhow = "1.0.98"
crossterm = "0.29"
dotenvy = "0.15"
evm-amm-state = { version = "0.2.0", path = "../evm-amm-state", default-features = false }
evm-fork-cache = { version = "0.3.0", path = "../evm-fork-cache" }
futures = "0.3"
petgraph = "0.6"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", features = ["gzip"] }
revm = "34.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tower = "0.5"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "graph_lifecycle"
harness = false
required-features = ["uniswap-v2"]

[[bench]]
name = "live_search_runtime"
harness = false
required-features = ["live-runtime", "uniswap-v2"]

[[example]]
name = "arbitrage_search"
required-features = ["uniswap-v2", "uniswap-v3", "curve"]

[[example]]
name = "production_basket_search"
required-features = ["uniswap-v2", "uniswap-v3"]

[[example]]
name = "docs_route_benchmark"
required-features = ["uniswap-v2", "uniswap-v3"]

[[example]]
name = "aggregator_quote_comparison"
required-features = ["uniswap-v2", "uniswap-v3"]

[[example]]
name = "demo_router_route_check"
required-features = ["uniswap-v2", "uniswap-v3", "curve"]

[[example]]
name = "multihop_quote_contract"
required-features = ["uniswap-v2", "uniswap-v3"]

[[example]]
name = "progressive_live_routes"
required-features = ["live-runtime", "uniswap-v2"]

[[example]]
name = "dynamic_live_routes"
required-features = ["live-runtime", "uniswap-v2"]

[[example]]
name = "rpc_payload_ceiling"
required-features = ["live-runtime"]

[[bin]]
name = "amm-route-tui"
path = "src/bin/amm_route_tui.rs"
required-features = ["live-runtime", "uniswap-v2", "uniswap-v3", "pancake-v3", "curve"]
