[package]
name = "evm-amm-route-sidecar"
version = "0.1.0-beta.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Self-hosted HTTP routing sidecar for evm-amm-search"
publish = false

# Keep the deployable service independent from the core crate's local-path
# development workspace and lockfile.
[workspace]
resolver = "2"

[dependencies]
alloy-consensus = "1.1.2"
alloy-eips = "1.0.38"
alloy-network = "1.0.38"
alloy-primitives = { version = "1.4", features = ["map", "serde"] }
alloy-provider = { version = "1.0.38", features = ["ws"] }
alloy-rpc-client = "1.0.38"
alloy-rpc-types-eth = "1.0.38"
alloy-sol-types = "1.4"
alloy-transport-balancer = "0.2.0"
anyhow = "1.0.98"
axum = "0.8.9"
evm-amm-search = { version = "=0.1.2", default-features = false, features = ["live-runtime", "uniswap-v2", "uniswap-v3", "pancake-v3", "slipstream", "solidly-v2", "balancer-v2", "curve"] }
evm-amm-state = { version = "0.2.0", default-features = false, features = ["live-runtime", "uniswap-v2", "uniswap-v3", "pancake-v3", "slipstream", "solidly-v2", "balancer-v2", "curve"] }
evm-fork-cache = "0.3.0"
futures = "0.3"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.7.0", features = ["catch-panic", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2"

[dev-dependencies]
alloy-transport = "1.0.38"
criterion = { version = "0.5", default-features = false }
tempfile = "3"

[[bench]]
name = "graph_index"
harness = false

[profile.release]
strip = "symbols"
